# commutator-controller

./: .gitmodules  README.md
firmware/: CMakeLists.txt  cap1296.cpp  cap1296.h  commutator.c  defs.h  io.cpp  io.h  is32fl3193.c  is32fl3193.cpp  is32fl3193.h  ltc4425.c  ltc4425.cpp  ltc4425.h  main.cpp  motor.cpp  motor.h  parser.cpp  parser.h  pindefs.h  rotor.cpp  rotor.h  save.cpp  save.h  tmc2130.c  tmc2130.cpp  tmc2130.h
firmware/accelstepper/: AccelStepper.cpp  AccelStepper.h
pcb/: cap-charger.kicad_sch  cap-touch-sensor.kicad_sch  ibom.config.ini  mcu-flash.kicad_sch  motor-driver.kicad_sch  oe-commutator-controller.kicad_dru  oe-commutator-controller.kicad_pcb  oe-commutator-controller.kicad_pro  oe-commutator-controller.kicad_sch  rgb-driver.kicad_sch  usb-power.kicad_sch
pcb/manufacturing/bom/: ibom.html  oe-commutator-controller.html
pcb/manufacturing/gerber/: oe-commutator-controller-B_Cu.gbr  oe-commutator-controller-B_Fab.gbr  oe-commutator-controller-B_Mask.gbr  oe-commutator-controller-B_Paste.gbr  oe-commutator-controller-B_Silkscreen.gbr  oe-commutator-controller-Edge_Cuts.gbr  oe-commutator-controller-F_Cu.gbr  oe-commutator-controller-F_Fab.gbr  oe-commutator-controller-F_Mask.gbr  oe-commutator-controller-F_Paste.gbr  oe-commutator-controller-F_Silkscreen.gbr  oe-commutator-controller-In1_Cu.gbr  oe-commutator-controller-In2_Cu.gbr  oe-commutator-controller-NPTH.drl  oe-commutator-controller-PTH.drl  oe-commutator-controller-User_Comments.gbr
teensy/pcb/: oe-commutator-controller.kicad_pro
